# forest_gate

./: .env  .gitignore  Auth Service.postman_collection.json  Cargo.toml  Dockerfile  README.md  api_endpoints.md  auth.yml  docker-compose.app.yml  docker-compose.db.yml  docker-compose.yml  nginx.conf
.sqlx/: query-24aee7400b56ed7cff1fd1f635b2a1a6e788983ed7a5f63c7200c24ea24ab006.json  query-2e0e2b00d98b0224e0cef1022467c0bf785b84f2eceb8ffec8796f0785aa85d6.json  query-452e878c5bc929c1bc20449f3866022cc2e120b3058f0ddf3e8a0f05aa7ae387.json  query-7a0a6020fbe86931d5c19791373c90c4422fa699ad273965332311635ca37bab.json  query-9520671fb41e5dccf548033065e7b32541480e2fe73be5135c9db20b7bd985ff.json  query-b4af518ae654f948932716131a73703b9465656124622b1b2fd4a4831345d3b8.json  query-c72d0fe82835a99ec8610f84298bdcf42772c232840d63e086c6053cd74d7357.json  query-c97c711ff7dc4994c2c2e6583342917ef1441fe19b6a322ad17cfdedb981e1ef.json  query-d8e8a88b3640e7b3b33dd76cfac394b44738ead9d11c375d6892e1a8247e569c.json  query-e1f4d01640b755f1a0b7909ac6b8ab0a635916efead8c283f3dbf68fdebdc442.json  query-fa26e37ddc287a9249b5026529cff8b91455f170fca6df115e51465976e9ad29.json
interactions/: f8d2a13c-18ca-4782-88b6-a8bbe8f309de.md
migrations/: 20250916204644_create_users.sql  20250916205818_log_level.sql  20250921075226_init.sql  20250921112139_init_2.sql  20250921120912_base_identity.sql  20250921135340_add_indexes.sql  20250922094512_separate_user_devices.sql  20250922101038_add_user_id_device_keys.sql  20250922101734_fixes.sql  20251002152917_user_interactions_nullable_fk.sql
scripts/: app.bash  ec_private.pem  ec_private_pkcs8.pem  ec_private_sec1.pem  ec_public.pem  gen-keys-mac.bash  gen-keys.bash  gen_trusted_cert.bash  get-ec-keys.bash  private.pem  public.pem
src/: lib.rs  main.rs  seeding.rs  swagger.rs
src/config/: app_settings.rs  db_settings.rs  mod.rs  redis_settings.rs  traits.rs
src/controllers/: mod.rs  utils_controller.rs
src/data/: connection.rs
src/feature/: mod.rs
src/feature/audits/: db.rs
src/feature/clients/: mod.rs
src/feature/system/: mod.rs  repo.rs  routes.rs  service.rs  types.rs
src/features/: mod.rs
src/features/admin/: mod.rs  repo.rs  routes.rs  service.rs  types.rs
src/features/audits/: mod.rs  repo.rs  routes.rs  service.rs  types.rs
src/features/clients/: email_client.rs  maxmind_client.rs  mod.rs  openrouter_client.rs
src/features/devices/: db.rs  mod.rs  repo.rs  types.rs
src/features/onboarding/: mod.rs  repo.rs  routes.rs  service.rs  types.rs  utils.rs
src/features/system/: db.rs  mod.rs  routes.rs  service.rs  types.rs
src/features/users/: db.rs  helpers.rs  mod.rs  repo.rs  routes.rs  service.rs  types.rs
src/features/ws/: job.rs  mod.rs  types.rs  ws.rs
src/infrastructure/: mod.rs
src/infrastructure/middlewares/: mod.rs
src/infrastructure/persistence/: db.rs  redis.rs
src/models/: common.rs  user.rs
src/repositories/: user_repository.rs
src/services/: mod.rs
src/utils/: crypto.rs  error.rs  mod.rs  token_service.rs
tests/: login_anomalies_scored.csv  test.py
